# sim-phonia

./: .gitignore  CLAUDE.md  README.md  backlog.md  pyproject.toml  requirements.txt
.githooks/: pre-commit
documents/: activity.drawio  activity_context_builder.md  activity_engine.md  activity_presentation.md  architecture.md  character-model.md  character_service.md  chat_service.md  cognition.md  commands.md  configuration.md  human_in_the_loop.md  memory_service.md  mj_service.md  photo_service.md  service_character_storage.md  shadow_memory.md  shadow_storage.md  simcli.md  simphonia.md  simweb.md  tools_service.md
documents/analyse-transactionnelle/: analyse-transactionnelle.md  analyste-AT-analyse-textuelle.md  analyste-AT-system-prompt.md
resources/characters/: antoine.json  aurore.json  camille.json  diane.json  elise.json  julien.json  manon.json  marc.json  prisca.json  theo.json  zoe.json
resources/schema/: character-schema.json
scripts/: test_photo_generate.py  test_photo_lot4.py
src/simcli/: __init__.py  __main__.py  cli.py  client.py  errors.py
src/simphonia/: __main__.py  bootstrap.py  config.py  logging.yaml  logging_config.py  simphonia.yaml
src/simphonia/commands/: activity.py  activity_storage.py  character.py  character_storage.py  chat.py  memory.py  messages.py  mj.py  photo.py  providers.py  shadow_storage.py  system.py  tools.py
src/simphonia/core/: __init__.py  bus.py  cascade.py  command.py  decorators.py  discovery.py  errors.py  mcp.py  registry.py
src/simphonia/facade/: __init__.py  server.py
src/simphonia/http/: app.py  routes.py  schemas.py  sse.py
src/simweb/: index.html  package-lock.json  package.json  vite.config.js
src/simweb/src/: App.jsx  (+1 more)
tests/: test_autonomous_mj.py  test_bus_subscribe.py  test_engine_human_player.py  test_engine_human_submit.py  test_engine_mj_hooks.py  test_mcp_hints.py  test_mcp_roles.py  test_memorize.py  test_messages_bus.py  test_mj_command.py  test_mj_service.py  test_shadow_storage.py  test_tools_builder.py  test_turning_modes.py
(+57 files in other folders)
