[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sim-phonia"
version = "0.1.0"
description = "Event-bus server (simphonia) and CLI (simcli) connected over HTTP"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5",
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2.5",
    "sentence-transformers>=2.7",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
simphonia = "simphonia.__main__:main"
simcli = "simcli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/simphonia", "src/simcli"]

[tool.hatch.build.targets.sdist]
include = ["src", "pyproject.toml", "README.md", "documents"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
